[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/IconUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -96.0
margin_right = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1272.0
margin_bottom = 64.0

[node name="Icon1" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 64.0
margin_bottom = 64.0

[node name="Icon2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0

[node name="Icon3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1272.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1265.0
margin_bottom = 21.0
text = "Z = pick up package | X = drop package | Space = Jump (as much as you can) | R = Restart | ESC = Quit"
align = 1
